# orienta-ai

./: .env.example  .gitignore  ADMIN_ACCESO_COMPLETO.md  AGENTS.md  ANALISIS_PERFORMANCE_Y_LINKS.md  CAMBIO_BRANDING_VOCARI.md  CLAUDE.md  CLAUDE_CODE_SKILLS_Y_AGENTES.md  DEPLOYMENT_GUIDE.md  DIAGRAMA_ARQUITECTURA.md  EJECUTAR_SCRIPTS_AHORA.md  GUIA_ADMIN_COMPLETA.md  GUIA_DESCARGA_DATOS_MINEDUC.md  GUIA_PRUEBAS.md  GUIA_RAPIDA_INTEGRACION.md  GUION_VIDEO_LINKEDIN.md  INICIO_AQUI.md  INSTALACION_COMPLETA.md  INTEGRACION_MINEDUC.md  LICENSE  NUEVAS_FUNCIONALIDADES.md  OPTIMIZACIONES_IMPLEMENTADAS.md  ORIENTADOR_TESTING_GUIDE.md  PARENT_SYSTEM_GUIDE.md  POST_LINKEDIN.md  PROFILE_SELECTOR_GUIDE.md  PROGRESO_MVP.md  PUNTOS_CLAVE_VIDEO.md  QUICK_START.md  README.md  RESUMEN_SISTEMA_COMPLETO.md  SETUP_ADMIN_GUIDE.md  SISTEMA_LIMITES.md  SISTEMA_ROLES_Y_DASHBOARDS.md  SISTEMA_VISUALIZACIONES.md  SOLUCION_ACCESO_DENEGADO.md  SUPABASE_ROLES_AND_SESSIONS.sql  SUPABASE_SETUP.md  SUPABASE_USER_PROFILES.sql  TESTING_GUIDE.md  (+11 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py  monitoring.py
backend/app/admin/: __init__.py  router.py  schemas.py  service.py
backend/app/ai/: __init__.py  router.py
backend/app/ai_engine/: cache.py  cost_tracking.py  jobs.py  openrouter_client.py  pii_scrubber.py  pipelines.py  prompts.py  validation.py
backend/app/audit/: models.py  router.py  schemas.py  service.py
backend/app/auth/: middleware.py  models.py  permissions.py  router.py  schemas.py  (+1 more)
backend/scripts/: migrate_from_supabase.py  seed_demo.py  seed_test_users.py
backend/tests/: conftest.py
backend/workers/: worker.py
(+458 files in other folders)
